# Kaizen

./: .gitignore  README.md  modal_demo_runner.py  modal_vllm.py  pyproject.toml
demo/: __init__.py
demo/py_to_go/: __init__.py  mapping.md  py_to_go.kaizen  run_demo.py  run_summary_2026-02-04.txt  run_with_agentfs.sh
demo/py_to_go/agents/: __init__.py  converter.py  fixer.py  planner.py  test_runner.py
samples/: 01_basic_session.py  02_agents_and_dispatcher.py  03_complete_workflow.py  04_custom_agent.py  05_artifacts.py  README.md
src/kaizen/: __init__.py  agent.py  dispatcher.py  planner.py  session.py  types.py
src/kaizen/agents/: __init__.py  reverse.py  uppercase.py
src/kaizen/llm/: __init__.py  base.py  ollama.py  openai_compat.py
src/trace/: __init__.py  agent.py  dispatcher.py  planner.py  session.py  types.py
src/trace/agents/: __init__.py  reverse.py  uppercase.py
src/trace/llm/: __init__.py  base.py  ollama.py
tests/: __init__.py  conftest.py  test_agents.py  test_dispatcher.py  test_e2e.py  test_infrastructure.py  test_llm.py  test_openai_compat.py  test_persistence.py  test_planner.py  test_py_to_go_toolsmith_fallback.py  test_session_artifacts.py  test_session_snapshots.py  test_session_state.py  test_session_trajectory.py  test_types.py
